--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,9 +23,10 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/mikelove/spatialDmelxsim
 BugReports: https://github.com/mikelove/spatialDmelxsim/issues
-Suggests: 
+Suggests:
     knitr,
-    rmarkdown
+    rmarkdown,
+    BiocStyle
 VignetteBuilder: knitr
 biocViews: ExperimentHub, SequencingData, RNASeqData, ExpressionData,
     Drosophila_melanogaster_Data, GEO
